# lightmsucsp

./: Case_N020_6.txt  readme.md
src/: CMakeLists.txt  functions.cpp  functions.h  main.cpp  readgraph2.sh
src/HGB_Edward/: HgbSegInterval.h
src/HGB_Edward/include/: JCousty.h  MST.h  lcomptree.h  list.h  mcsort.h  mcunionfind.h  mcweightgraph.h
src/data/: dataEMIDEC_generator.py  datasetACDC_generator.py
src/data_augmentation/: averagebbox.py  patientfiles.py  patientsfile.txt  reading.py  visualize.py
